--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ hr:not([size]) {
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
-  margin-top: 0;
+  margin-top: 10;
   margin-bottom: 0.5rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
@@ -493,6 +493,13 @@ progress {
   font-weight: 300;
 }
 
+.hahage {
+  font-size: 1.25rem;
+  font-weight: 300;
+  text-align: center;
+
+}
+
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
   font-weight: 300;
@@ -639,6 +646,11 @@ progress {
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
+}
+
+
+.containercustom {
+  width: 100%;
 }
 
 @media (min-width: 576px) {
@@ -7409,6 +7421,10 @@ textarea.form-control-lg {
 }
 
 .ms-auto {
+  margin-left: auto !important;
+}
+
+.ms-autoportfolio {
   margin-left: auto !important;
 }
 
