--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
 
 body{
-   /* margin: 0;
+   margin: 0;
     padding: 0;
-    background: #34495e;*/
+    /*background: #34495e;*/
   }
   .slidershow{
     width: 700px;
