--- a/style.css
+++ b/style.css
@@ -1,22 +1,16 @@
-
-
 body{
-   margin: 0;
-    padding: 0;
-    /*background: #34495e;*/
+
   }
   .slidershow{
-    width: 700px;
-    height: 400px;
+
     overflow: hidden;
- 
   }
   .middle{
     position: relative;
 
-    left: 0;
+    left: 50%;
     transform: translateX(-50%);
-    /*transform: translate(-50%,-50%);*/
+
   }
   .navigation{
     position: absolute;
@@ -43,11 +37,8 @@ body{
   }
   
   .slides{
-    position: relative;
     width: 500%;
-    margin: 0;
-    left: 0;
-    /*height: 100%;*/
+    height: 100%;
     display: flex;
   }
   
@@ -58,7 +49,6 @@ body{
   .slide img{
     width: 100%;
     height: 100%;
-
   }
   
   #r1:checked ~ .s1{
