--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@ body{
   .slidershow{
 
     overflow: hidden;
+
   }
   .middle{
     position: relative;
 
-    left: 50%;
-    transform: translateX(-50%);
+    
+    /*transform: translateX(-50%);*/
 
   }
   .navigation{
@@ -37,14 +38,18 @@ body{
   }
   
   .slides{
+
     width: 500%;
     height: 100%;
     display: flex;
+
+    animation: 20s slider infinite;
   }
   
   .slide{
     width: 20%;
     transition: 0.6s;
+
   }
   .slide img{
     width: 100%;
