--- a/css/styles.css
+++ b/css/styles.css
@@ -102,11 +102,31 @@ hr:not([size]) {
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
-  margin-top: 10;
+
   margin-bottom: 0.5rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
+}
+
+
+
+h9, .h9 {
+  margin-top: 50;
+  padding-top: 50;
+  margin-bottom: 0.5rem;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+h9, .h9 {
+  font-size: calc(1.375rem + 1.5vw);
+}
+@media (min-width: 1200px) {
+  h9, .h9 {
+    font-size: 2.5rem;
+  }
 }
 
 h1, .h1 {
@@ -492,7 +512,11 @@ progress {
   font-size: 1.25rem;
   font-weight: 300;
 }
-
+.lead2 {
+  font-size: 1.25rem;
+  font-weight: 300;
+  text-align: center;
+}
 .hahage {
   font-size: 1.25rem;
   font-weight: 300;
