--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ h9, .h9 {
   padding-top: 50;
   margin-bottom: 0.5rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  color: white;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -492,6 +493,8 @@ output {
 }
 
 iframe {
+  position: relative;
+  align-items: center;
   border: 0;
 }
 
