--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,26 @@ h9, .h9 {
   }
 }
 
+
+
+h10, .h10 {
+  margin-top: 50;
+  padding-top: 50;
+  margin-bottom: 0.5rem;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  color: white;
+  font-weight: 50;
+  line-height: 0;
+}
+
+h10, .h10 {
+  font-size: calc(1.375rem + 1.5vw);
+}
+@media (min-width: 1200px) {
+  h10, .h10 {
+    font-size: 2.5rem;
+  }
+}
 h1, .h1 {
   font-size: calc(1.375rem + 1.5vw);
 }
@@ -527,6 +547,17 @@ progress {
   padding-top: 20px;
 }
 
+.igitna {
+  font-size: 1.25rem;
+  padding: 5%;
+  text-align: center;
+white-space: pre-line;
+}
+.igitnap {
+  font-size: 0.9rem;
+  padding: 5%;
+  text-align: center;
+}
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
   font-weight: 300;
@@ -6779,7 +6810,12 @@ textarea.form-control-lg {
 .d-flex {
   display: flex !important;
 }
-
+.e-flex {
+  height: 10em;
+  display: flex;
+  align-items: center;
+  justify-content: center 
+}
 .d-inline-flex {
   display: inline-flex !important;
 }
