--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,25 @@ h9, .h9 {
 }
 
 
+h11, .h11 {
+  margin-top: 50;
+  padding-top: 50;
+  margin-bottom: 0.5rem;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  color: rgb(44, 62, 80);
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+h11, .h11 {
+  font-size: calc(1.375rem + 1.5vw);
+}
+@media (min-width: 1200px) {
+  h11, .h11 {
+    font-size: 2.5rem;
+  }
+}
+
 
 h10, .h10 {
   margin-top: 50;
@@ -558,6 +577,7 @@ white-space: pre-line;
   padding: 5%;
   text-align: center;
 }
+
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
   font-weight: 300;
